# connections-2-secrets

./: .gitignore  LICENSE  README.md  connections2secrets.py  pyproject.toml
templates/: connections.j2  values.j2
